// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="headline"
    variant="h4"
  >
    Close position
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(Connect(withStateHandlers(withHandlers(ClosePositionForm))))
    backButton={
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[Function]}
      >
        Cancel
      </WithStyles(ForwardRef(Button))>
    }
    id="id"
    onClose={[Function]}
  />
</div>
`;

exports[`matches snapshot when loading 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="headline"
    variant="h4"
  >
    Close position
  </WithStyles(ForwardRef(Typography))>
  <Progress />
</div>
`;
